--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -59,5 +59,5 @@ set imsearch=0
 highlight lCursor guifg=NONE guibg=Cyan
 
 " Reset search highlightning after pressing Esc
-nnoremap <esc> :noh<return><esc>
+" nnoremap <esc> :noh<return><esc>
 
