[+] Added commended string that allowes to copy into System clipboard

--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -61,3 +61,5 @@ highlight lCursor guifg=NONE guibg=Cyan
 " Reset search highlightning after pressing Esc
 " nnoremap <esc> :noh<return><esc>
 
+" Make MacVim to copy into System clipboard
+" set clipboard=unnamed
