[+] Submodules instead of subtree and more...
[+] NerdTree
[+] ctrlp
[*] Removed :noh on <esc>
[+] Added commended string into config. It to uncomment - let macvim to copy into system clipboard
    by default.

--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -59,5 +59,7 @@ set imsearch=0
 highlight lCursor guifg=NONE guibg=Cyan
 
 " Reset search highlightning after pressing Esc
-nnoremap <esc> :noh<return><esc>
+" nnoremap <esc> :noh<return><esc>
 
+" Make MacVim to copy into System clipboard
+" set clipboard=unnamed
