[*] Winkey layout for cyrillic

--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -53,7 +53,7 @@ colorscheme solarized
 set guifont=Menlo:h12
 
 " Cyrrillic Support
-set keymap=russian-jcuken
+set keymap=russian-jcukenwin
 set iminsert=0
 set imsearch=0
 highlight lCursor guifg=NONE guibg=Cyan
