[+] Script for Current Selection Search

--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -113,3 +113,14 @@ set visualbell t_vb=
 
 " Plugins:
 runtime macros/matchit.vim
+
+" Custom scripts:
+xnoremap * :<C-u>call <SID>VSetSearch()<CR>/<C-R>=@/<CR><CR>
+xnoremap # :<C-u>call <SID>VSetSearch()<CR>?<C-R>=@/<CR><CR>
+
+function! s:VSetSearch()
+    let temp = @s
+    norm! gv"sy
+    let @/ = '\V' . substitute(escape(@s, '/\'), '\n', '\\n', 'g')
+    let @s = temp
+endfunction
