--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -125,6 +125,15 @@ function! s:VSetSearch()
     let @s = temp
 endfunction
 
+command! -nargs=0 -bar Qargs execute 'args' QuickfixFilenames()
+function! QuickfixFilenames()
+    let buffer_numbers = {}
+    for quickfix_item in getqflist()
+        let buffer_numbers[quickfix_item['bufnr']] = bufname(quickfix_item['bufnr'])
+    endfor
+    return join(map(values(buffer_numbers), 'fnameescape(v:val)'))
+endfunction
+
 " Remaps & from :s into :&&
 nnoremap & :&&<CR>
 xnoremap & :&&<CR>
