[+] infercase setting is enabled for caseinsensitive autocompletion

--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -15,6 +15,9 @@ set ignorecase
 set smartcase
 set hlsearch
 
+" Autocomplete
+set infercase
+
 " Remove useless splash screen:
 set shortmess+=|
 
