--- a/.gitmodules
+++ b/.gitmodules
@@ -33,4 +33,4 @@
 	url = git://github.com/tpope/vim-unimpaired.git
 [submodule "bundle/todo-txt-vim"]
 	path = bundle/todo-txt-vim
-	url = git@github.com:freitass/todo.txt-vim.git
+	url = git@github.com:ThoroughNinja/todo.txt-vim.git
