[*] Plugin Syntastic recommended setup

--- a/.vimrc.settings
+++ b/.vimrc.settings
@@ -128,6 +128,17 @@ set visualbell t_vb=
 " Plugins:
 runtime macros/matchit.vim
 
+" Plugin configuration
+" Syntastic:
+set statusline+=%#warningmsg#
+set statusline+=%{SyntasticStatuslineFlag()}
+set statusline+=%*
+
+let g:syntastic_always_populate_loc_list = 1
+let g:syntastic_auto_loc_list = 1
+let g:syntastic_check_on_open = 1
+let g:syntastic_check_on_wq = 0
+
 " Custom scripts:
 xnoremap * :<C-u>call <SID>VSetSearch()<CR>/<C-R>=@/<CR><CR>
 xnoremap # :<C-u>call <SID>VSetSearch()<CR>?<C-R>=@/<CR><CR>
